--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </li>
         </ul>
     </main>
-    <script src="/assets/script.js"></script>
+    <script src="/assets/index.js"></script>
 </body>
 
 </html>
