--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/style.css">
-    <link rel="stylesheet" href="/assets/scrollbar.css">
+    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/scrollbar.css">
     <title>Pokedex</title>
 </head>
 
@@ -32,7 +32,7 @@
                     <span>Bulbasaur</span>
                     <span>#001</span>
                 </div>
-                <img src="/assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
+                <img src="./assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -47,7 +47,7 @@
                     <span>Ivysaur</span>
                     <span>#002</span>
                 </div>
-                <img src="/assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
+                <img src="./assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -61,7 +61,7 @@
                     <span>Venusaur</span>
                     <span>#003</span>
                 </div>
-                <img src="/assets/imagens/venusaur.gif" alt="venusaur" class="gif">
+                <img src="./assets/imagens/venusaur.gif" alt="venusaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -75,7 +75,7 @@
                     <span>Charmander</span>
                     <span>#004</span>
                 </div>
-                <img src="/assets/imagens/charmander.gif" alt="charmander" class="gif">
+                <img src="./assets/imagens/charmander.gif" alt="charmander" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -88,7 +88,7 @@
                     <span>Charmeleon</span>
                     <span>#005</span>
                 </div>
-                <img src="/assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
+                <img src="./assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -102,7 +102,7 @@
                     <span>Charizard</span>
                     <span>#006</span>
                 </div>
-                <img src="/assets/imagens/charizard.gif" alt="charizard" class="gif">
+                <img src="./assets/imagens/charizard.gif" alt="charizard" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                     <li class="type flying">Flying</li>
@@ -116,7 +116,7 @@
                     <span>Squirtle</span>
                     <span>#007</span>
                 </div>
-                <img src="/assets/imagens/squirtle.gif" alt="squirtle" class="gif">
+                <img src="./assets/imagens/squirtle.gif" alt="squirtle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -129,7 +129,7 @@
                     <span>Wartotle</span>
                     <span>#008</span>
                 </div>
-                <img src="/assets/imagens/wartortle.gif" alt="wartortle" class="gif">
+                <img src="./assets/imagens/wartortle.gif" alt="wartortle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -142,7 +142,7 @@
                     <span>Blastoise</span>
                     <span>#009</span>
                 </div>
-                <img src="/assets/imagens/blastoise.gif" alt="blastoise" class="gif">
+                <img src="./assets/imagens/blastoise.gif" alt="blastoise" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -156,7 +156,7 @@
                     <span>Caterpie</span>
                     <span>#010</span>
                 </div>
-                <img src="/assets/imagens/caterpie.gif" alt="caterpie" class="gif">
+                <img src="./assets/imagens/caterpie.gif" alt="caterpie" class="gif">
                 <ul class="types">
                     <li class="type bug">Bug</li>
                 </ul>
@@ -166,7 +166,7 @@
             </li>
         </ul>
     </main>
-    <script src="/assets/index.js"></script>
+    <script src="./assets/index.js"></script>
 </body>
 
 </html>
