--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
 <body>
     <header class="header">
         <a href="#">
-            <img src="/assets/imagens/pokeball.png" alt="pokeball" class="logo">
+            <img src="./assets/imagens/pokeball.png" alt="pokeball" class="logo">
         </a>
-        <button class="theme-button">
-            <img src="/assets/imagens/sun.png" alt="sol" class="img-button">
-        </button>
-        <button class="theme-button">
-            <img src="/assets/imagens/moon.png" alt="moon" class="img-button">
-        </button>
     </header>
     <main class="main">
         <ul class="list">
