--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="./assets/scrollbar.css">
+    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/assets/scrollbar.css">
     <title>Pokedex</title>
 </head>
 
 <body>
+    <div class="container" id="blur">
     <header class="header">
         <a href="#">
-            <img src="./assets/imagens/pokeball.png" alt="pokeball" class="logo">
+            <img src="/assets/imagens/pokeball.png" alt="pokeball" class="logo">
         </a>
     </header>
     <main class="main">
@@ -26,7 +28,7 @@
                     <span>Bulbasaur</span>
                     <span>#001</span>
                 </div>
-                <img src="./assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
+                <img src="/assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -35,13 +37,16 @@
                     There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows
                     larger.
                 </p>
+                <div class="bulbasaur-btn" id="bulbasaur-btn">
+                    <button class="open-popup" onclick="toggle()">Mais Informações</button>
+                </div>
             </li>
             <li class="pokemon-card grass-type">
                 <div class="pokemon-name">
                     <span>Ivysaur</span>
                     <span>#002</span>
                 </div>
-                <img src="./assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
+                <img src="/assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -55,7 +60,7 @@
                     <span>Venusaur</span>
                     <span>#003</span>
                 </div>
-                <img src="./assets/imagens/venusaur.gif" alt="venusaur" class="gif">
+                <img src="/assets/imagens/venusaur.gif" alt="venusaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -69,7 +74,7 @@
                     <span>Charmander</span>
                     <span>#004</span>
                 </div>
-                <img src="./assets/imagens/charmander.gif" alt="charmander" class="gif">
+                <img src="/assets/imagens/charmander.gif" alt="charmander" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -82,7 +87,7 @@
                     <span>Charmeleon</span>
                     <span>#005</span>
                 </div>
-                <img src="./assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
+                <img src="/assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -96,7 +101,7 @@
                     <span>Charizard</span>
                     <span>#006</span>
                 </div>
-                <img src="./assets/imagens/charizard.gif" alt="charizard" class="gif">
+                <img src="/assets/imagens/charizard.gif" alt="charizard" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                     <li class="type flying">Flying</li>
@@ -110,7 +115,7 @@
                     <span>Squirtle</span>
                     <span>#007</span>
                 </div>
-                <img src="./assets/imagens/squirtle.gif" alt="squirtle" class="gif">
+                <img src="/assets/imagens/squirtle.gif" alt="squirtle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -123,7 +128,7 @@
                     <span>Wartotle</span>
                     <span>#008</span>
                 </div>
-                <img src="./assets/imagens/wartortle.gif" alt="wartortle" class="gif">
+                <img src="/assets/imagens/wartortle.gif" alt="wartortle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -136,7 +141,7 @@
                     <span>Blastoise</span>
                     <span>#009</span>
                 </div>
-                <img src="./assets/imagens/blastoise.gif" alt="blastoise" class="gif">
+                <img src="/assets/imagens/blastoise.gif" alt="blastoise" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -150,7 +155,7 @@
                     <span>Caterpie</span>
                     <span>#010</span>
                 </div>
-                <img src="./assets/imagens/caterpie.gif" alt="caterpie" class="gif">
+                <img src="/assets/imagens/caterpie.gif" alt="caterpie" class="gif">
                 <ul class="types">
                     <li class="type bug">Bug</li>
                 </ul>
@@ -160,6 +165,27 @@
             </li>
         </ul>
     </main>
+</div>
+    <div class="popup-bulbasaur" id="popup-bulbasaur">
+        <button class="close-popup" onclick="toggle()"><i class='bx bxs-x-circle'></i></button>
+        <div class="pokemon-name-popup">
+            <span>Bulbasaur</span>
+        </div>
+        <img src="./assets/imagens/001.png" alt="" class="poke-foto">
+        <div class="data-container">
+            <p>
+                Bulbasaur, the seed pokemon<br>
+                Height : 71cm<br>Weight: 6,8Kg<br>
+                Abilities: Overgrow
+            </p>
+        </div>
+        <ul class="types-weaknesses">
+            <li class="weak-fire">Fire</li>
+            <li class="weak-psychic">Psychic</li>
+            <li class="weak-flying">Flying</li>
+            <li class="weak-ice">Ice</li>
+        </ul>
+    </div>
     <script src="./assets/index.js"></script>
 </body>
 
