--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     larger.
                 </p>
                 <div class="bulbasaur-btn" id="bulbasaur-btn">
-                    <button class="open-popup" onclick="toggle()">Mais Informações</button>
+                    <button class="open-popup" onclick="toggle()">More Info</button>
                 </div>
             </li>
             <li class="pokemon-card grass-type">
