--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container" id="blur">
     <header class="header">
         <a href="#">
-            <img src="/assets/imagens/pokeball.png" alt="pokeball" class="logo">
+            <img src="./assets/imagens/pokeball.png" alt="pokeball" class="logo">
         </a>
     </header>
     <main class="main">
@@ -28,7 +28,7 @@
                     <span>Bulbasaur</span>
                     <span>#001</span>
                 </div>
-                <img src="/assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
+                <img src="./assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -38,7 +38,7 @@
                     larger.
                 </p>
                 <div class="bulbasaur-btn" id="bulbasaur-btn">
-                    <button class="open-popup" onclick="toggle()">More Info</button>
+                    <button class="open-popup" onclick="toggle()">Mais Informações</button>
                 </div>
             </li>
             <li class="pokemon-card grass-type">
@@ -46,7 +46,7 @@
                     <span>Ivysaur</span>
                     <span>#002</span>
                 </div>
-                <img src="/assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
+                <img src="./assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -60,7 +60,7 @@
                     <span>Venusaur</span>
                     <span>#003</span>
                 </div>
-                <img src="/assets/imagens/venusaur.gif" alt="venusaur" class="gif">
+                <img src="./assets/imagens/venusaur.gif" alt="venusaur" class="gif">
                 <ul class="types">
                     <li class="type grass">Grass</li>
                     <li class="type poison">Poison</li>
@@ -74,7 +74,7 @@
                     <span>Charmander</span>
                     <span>#004</span>
                 </div>
-                <img src="/assets/imagens/charmander.gif" alt="charmander" class="gif">
+                <img src="./assets/imagens/charmander.gif" alt="charmander" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -87,7 +87,7 @@
                     <span>Charmeleon</span>
                     <span>#005</span>
                 </div>
-                <img src="/assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
+                <img src="./assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                 </ul>
@@ -101,7 +101,7 @@
                     <span>Charizard</span>
                     <span>#006</span>
                 </div>
-                <img src="/assets/imagens/charizard.gif" alt="charizard" class="gif">
+                <img src="./assets/imagens/charizard.gif" alt="charizard" class="gif">
                 <ul class="types">
                     <li class="type fire">Fire</li>
                     <li class="type flying">Flying</li>
@@ -115,7 +115,7 @@
                     <span>Squirtle</span>
                     <span>#007</span>
                 </div>
-                <img src="/assets/imagens/squirtle.gif" alt="squirtle" class="gif">
+                <img src="./assets/imagens/squirtle.gif" alt="squirtle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -128,7 +128,7 @@
                     <span>Wartotle</span>
                     <span>#008</span>
                 </div>
-                <img src="/assets/imagens/wartortle.gif" alt="wartortle" class="gif">
+                <img src="./assets/imagens/wartortle.gif" alt="wartortle" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -141,7 +141,7 @@
                     <span>Blastoise</span>
                     <span>#009</span>
                 </div>
-                <img src="/assets/imagens/blastoise.gif" alt="blastoise" class="gif">
+                <img src="./assets/imagens/blastoise.gif" alt="blastoise" class="gif">
                 <ul class="types">
                     <li class="type water">Water</li>
                 </ul>
@@ -155,7 +155,7 @@
                     <span>Caterpie</span>
                     <span>#010</span>
                 </div>
-                <img src="/assets/imagens/caterpie.gif" alt="caterpie" class="gif">
+                <img src="./assets/imagens/caterpie.gif" alt="caterpie" class="gif">
                 <ul class="types">
                     <li class="type bug">Bug</li>
                 </ul>
