--- a/index.html
+++ b/index.html
@@ -186,6 +186,27 @@
             <li class="weak-ice">Ice</li>
         </ul>
     </div>
+    <div class="popup-ivysaur" id="popup-ivysaur">
+        <button class="close-popup" onclick="toggleIvysaur()"><i class='bx bxs-x-circle'></i></button>
+        <div class="pokemon-name-popup">
+            <span>Ivysaur</span>
+        </div>
+        <img src="./assets/imagens/002.png" alt="" class="poke-foto">
+        <div class="data-container">
+            <p>
+                Ivysaur, the seed pokemon<br>
+                Height : 99 cm<br>Weight: 130 Kg<br>
+                Abilities: Overgrow
+            </p>
+            <h3>Weaknesses</h2>
+        </div>
+        <ul class="types-weaknesses">
+            <li class="weak-fire">Fire</li>
+            <li class="weak-psychic">Psychic</li>
+            <li class="weak-flying">Flying</li>
+            <li class="weak-ice">Ice</li>
+        </ul>
+    </div>
     <script src="./assets/index.js"></script>
 </body>
 
