--- a/index.html
+++ b/index.html
@@ -16,158 +16,169 @@
 
 <body>
     <div class="container" id="blur">
-    <header class="header">
-        <a href="#">
-            <img src="./assets/imagens/pokeball.png" alt="pokeball" class="logo">
-        </a>
-    </header>
-    <main class="main">
-        <ul class="list">
-            <li class="pokemon-card grass-type">
-                <div class="pokemon-name">
-                    <span>Bulbasaur</span>
-                    <span>#001</span>
-                </div>
-                <img src="./assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
-                <ul class="types">
-                    <li class="type grass">Grass</li>
-                    <li class="type poison">Poison</li>
-                </ul>
-                <p class="poke-info">
-                    There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows
-                    larger.
-                </p>
-                <div class="bulbasaur-btn" id="bulbasaur-btn">
-                    <button class="open-popup" onclick="toggle()">More Info</button>
-                </div>
-            </li>
-            <li class="pokemon-card grass-type">
-                <div class="pokemon-name">
-                    <span>Ivysaur</span>
-                    <span>#002</span>
-                </div>
-                <img src="./assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
-                <ul class="types">
-                    <li class="type grass">Grass</li>
-                    <li class="type poison">Poison</li>
-                </ul>
-                <p class="poke-info">
-                    When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
-                </p>
-            </li>
-            <li class="pokemon-card grass-type">
-                <div class="pokemon-name">
-                    <span>Venusaur</span>
-                    <span>#003</span>
-                </div>
-                <img src="./assets/imagens/venusaur.gif" alt="venusaur" class="gif">
-                <ul class="types">
-                    <li class="type grass">Grass</li>
-                    <li class="type poison">Poison</li>
-                </ul>
-                <p class="poke-info">
-                    Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
-                </p>
-            </li>
-            <li class="pokemon-card fire-type">
-                <div class="pokemon-name">
-                    <span>Charmander</span>
-                    <span>#004</span>
-                </div>
-                <img src="./assets/imagens/charmander.gif" alt="charmander" class="gif">
-                <ul class="types">
-                    <li class="type fire">Fire</li>
-                </ul>
-                <p class="poke-info">
-                    It has a preference for hot things. When it rains, steam is said to spout from the tip of its tail.
-                </p>
-            </li>
-            <li class="pokemon-card fire-type">
-                <div class="pokemon-name">
-                    <span>Charmeleon</span>
-                    <span>#005</span>
-                </div>
-                <img src="./assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
-                <ul class="types">
-                    <li class="type fire">Fire</li>
-                </ul>
-                <p class="poke-info">
-                    It has a barbaric nature. In battle, it whips its fiery tail around and slashes away with sharp
-                    claws.
-                </p>
-            </li>
-            <li class="pokemon-card fire-type">
-                <div class="pokemon-name">
-                    <span>Charizard</span>
-                    <span>#006</span>
-                </div>
-                <img src="./assets/imagens/charizard.gif" alt="charizard" class="gif">
-                <ul class="types">
-                    <li class="type fire">Fire</li>
-                    <li class="type flying">Flying</li>
-                </ul>
-                <p class="poke-info">
-                    It spits fire that is hot enough to melt boulders. It may cause forest fires by blowing flames.
-                </p>
-            </li>
-            <li class="pokemon-card water-type">
-                <div class="pokemon-name">
-                    <span>Squirtle</span>
-                    <span>#007</span>
-                </div>
-                <img src="./assets/imagens/squirtle.gif" alt="squirtle" class="gif">
-                <ul class="types">
-                    <li class="type water">Water</li>
-                </ul>
-                <p class="poke-info">
-                    When it retracts its long neck into its shell, it squirts out water with vigorous force.
-                </p>
-            </li>
-            <li class="pokemon-card water-type">
-                <div class="pokemon-name">
-                    <span>Wartotle</span>
-                    <span>#008</span>
-                </div>
-                <img src="./assets/imagens/wartortle.gif" alt="wartortle" class="gif">
-                <ul class="types">
-                    <li class="type water">Water</li>
-                </ul>
-                <p class="poke-info ">
-                    It is recognized as a symbol of longevity. If its shell has algae on it, that Wartortle is very old.
-                </p>
-            </li>
-            <li class="pokemon-card water-type">
-                <div class="pokemon-name">
-                    <span>Blastoise</span>
-                    <span>#009</span>
-                </div>
-                <img src="./assets/imagens/blastoise.gif" alt="blastoise" class="gif">
-                <ul class="types">
-                    <li class="type water">Water</li>
-                </ul>
-                <p class="poke-info">
-                    It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its
-                    shell.
-                </p>
-            </li>
-            <li class="pokemon-card bug-type">
-                <div class="pokemon-name">
-                    <span>Caterpie</span>
-                    <span>#010</span>
-                </div>
-                <img src="./assets/imagens/caterpie.gif" alt="caterpie" class="gif">
-                <ul class="types">
-                    <li class="type bug">Bug</li>
-                </ul>
-                <p class="poke-info">
-                    For protection, it releases a horrible stench from the antenna on its head to drive away enemies.
-                </p>
-            </li>
-        </ul>
-    </main>
-</div>
+        <header class="header">
+            <a href="#">
+                <img src="./assets/imagens/pokeball.png" alt="pokeball" class="logo">
+            </a>
+        </header>
+        <main class="main">
+            <ul class="list">
+                <li class="pokemon-card grass-type">
+                    <div class="pokemon-name">
+                        <span>Bulbasaur</span>
+                        <span>#001</span>
+                    </div>
+                    <img src="./assets/imagens/bulbasaur.gif" alt="Bulbassaur" class="gif">
+                    <ul class="types">
+                        <li class="type grass">Grass</li>
+                        <li class="type poison">Poison</li>
+                    </ul>
+                    <p class="poke-info">
+                        There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows
+                        larger.
+                    </p>
+                    <div class="bulbasaur-btn" id="bulbasaur-btn">
+                        <button class="open-popup" onclick="toggleBulbasaur()">
+                            <h4>More Info</h4>
+                        </button>
+                    </div>
+                </li>
+                <li class="pokemon-card grass-type">
+                    <div class="pokemon-name">
+                        <span>Ivysaur</span>
+                        <span>#002</span>
+                    </div>
+                    <img src="./assets/imagens/ivysaur.gif" alt="ivysaur" class="gif">
+                    <ul class="types">
+                        <li class="type grass">Grass</li>
+                        <li class="type poison">Poison</li>
+                    </ul>
+                    <p class="poke-info">
+                        When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
+                    </p>
+                    <div class="ivysaur-btn" id="ivysaur-btn">
+                        <button class="open-popup" onclick="toggleIvysaur()">
+                            <h4>More Info</h4>
+                        </button>
+                    </div>
+                </li>
+                <li class="pokemon-card grass-type">
+                    <div class="pokemon-name">
+                        <span>Venusaur</span>
+                        <span>#003</span>
+                    </div>
+                    <img src="./assets/imagens/venusaur.gif" alt="venusaur" class="gif">
+                    <ul class="types">
+                        <li class="type grass">Grass</li>
+                        <li class="type poison">Poison</li>
+                    </ul>
+                    <p class="poke-info">
+                        Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
+                    </p>
+                </li>
+                <li class="pokemon-card fire-type">
+                    <div class="pokemon-name">
+                        <span>Charmander</span>
+                        <span>#004</span>
+                    </div>
+                    <img src="./assets/imagens/charmander.gif" alt="charmander" class="gif">
+                    <ul class="types">
+                        <li class="type fire">Fire</li>
+                    </ul>
+                    <p class="poke-info">
+                        It has a preference for hot things. When it rains, steam is said to spout from the tip of its
+                        tail.
+                    </p>
+                </li>
+                <li class="pokemon-card fire-type">
+                    <div class="pokemon-name">
+                        <span>Charmeleon</span>
+                        <span>#005</span>
+                    </div>
+                    <img src="./assets/imagens/charmeleon.gif" alt="charmeleon" class="gif">
+                    <ul class="types">
+                        <li class="type fire">Fire</li>
+                    </ul>
+                    <p class="poke-info">
+                        It has a barbaric nature. In battle, it whips its fiery tail around and slashes away with sharp
+                        claws.
+                    </p>
+                </li>
+                <li class="pokemon-card fire-type">
+                    <div class="pokemon-name">
+                        <span>Charizard</span>
+                        <span>#006</span>
+                    </div>
+                    <img src="./assets/imagens/charizard.gif" alt="charizard" class="gif">
+                    <ul class="types">
+                        <li class="type fire">Fire</li>
+                        <li class="type flying">Flying</li>
+                    </ul>
+                    <p class="poke-info">
+                        It spits fire that is hot enough to melt boulders. It may cause forest fires by blowing flames.
+                    </p>
+                </li>
+                <li class="pokemon-card water-type">
+                    <div class="pokemon-name">
+                        <span>Squirtle</span>
+                        <span>#007</span>
+                    </div>
+                    <img src="./assets/imagens/squirtle.gif" alt="squirtle" class="gif">
+                    <ul class="types">
+                        <li class="type water">Water</li>
+                    </ul>
+                    <p class="poke-info">
+                        When it retracts its long neck into its shell, it squirts out water with vigorous force.
+                    </p>
+                </li>
+                <li class="pokemon-card water-type">
+                    <div class="pokemon-name">
+                        <span>Wartotle</span>
+                        <span>#008</span>
+                    </div>
+                    <img src="./assets/imagens/wartortle.gif" alt="wartortle" class="gif">
+                    <ul class="types">
+                        <li class="type water">Water</li>
+                    </ul>
+                    <p class="poke-info ">
+                        It is recognized as a symbol of longevity. If its shell has algae on it, that Wartortle is very
+                        old.
+                    </p>
+                </li>
+                <li class="pokemon-card water-type">
+                    <div class="pokemon-name">
+                        <span>Blastoise</span>
+                        <span>#009</span>
+                    </div>
+                    <img src="./assets/imagens/blastoise.gif" alt="blastoise" class="gif">
+                    <ul class="types">
+                        <li class="type water">Water</li>
+                    </ul>
+                    <p class="poke-info">
+                        It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside
+                        its
+                        shell.
+                    </p>
+                </li>
+                <li class="pokemon-card bug-type">
+                    <div class="pokemon-name">
+                        <span>Caterpie</span>
+                        <span>#010</span>
+                    </div>
+                    <img src="./assets/imagens/caterpie.gif" alt="caterpie" class="gif">
+                    <ul class="types">
+                        <li class="type bug">Bug</li>
+                    </ul>
+                    <p class="poke-info">
+                        For protection, it releases a horrible stench from the antenna on its head to drive away
+                        enemies.
+                    </p>
+                </li>
+            </ul>
+        </main>
+    </div>
     <div class="popup-bulbasaur" id="popup-bulbasaur">
-        <button class="close-popup" onclick="toggle()"><i class='bx bxs-x-circle'></i></button>
+        <button class="close-popup" onclick="toggleBulbasaur()"><i class='bx bxs-x-circle'></i></button>
         <div class="pokemon-name-popup">
             <span>Bulbasaur</span>
         </div>
@@ -178,6 +189,7 @@
                 Height : 71cm<br>Weight: 6,8Kg<br>
                 Abilities: Overgrow
             </p>
+            <h3>Weaknesses</h2>
         </div>
         <ul class="types-weaknesses">
             <li class="weak-fire">Fire</li>
@@ -209,5 +221,4 @@
     </div>
     <script src="./assets/index.js"></script>
 </body>
-
 </html>
